<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedCalculator"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:baselineAligned="false"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Calculator"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Bksp"
            android:textAllCaps="false"
            tools:ignore="NestedWeights"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/C"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Plus_minus" />
    </LinearLayout>
    <LinearLayout

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button23"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Sin"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Cos"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Tan"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button26"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Ln"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button27"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Sqrt"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button28"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Pow2"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button29"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Pow"
            android:textAllCaps="false"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Log"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Seven"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Eight"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Nine"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Divide" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Four"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Five"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Six"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/multiply" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/One"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Two"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button17"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Three"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button18"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Subtract" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/Zero"
            android:layout_marginEnd="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Dot"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Equal"
            android:layout_marginEnd="5dp"/>
        <Button
            android:background="@drawable/rounded_corner"
            android:id="@+id/button22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/Add" />
    </LinearLayout>
</LinearLayout>