<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calculator"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button6"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Simple" />

    <Button
        android:layout_marginBottom="5dp"
        android:id="@+id/button7"
        android:background="@drawable/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Advanced" />

    <Button
        android:layout_marginBottom="5dp"
        android:id="@+id/button8"
        android:background="@drawable/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/About" />

    <Button
        android:layout_marginBottom="5dp"
        android:id="@+id/button9"
        android:background="@drawable/rounded_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit" />
</LinearLayout>